--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -3,22 +3,18 @@
         <h2 class="section-title">reviews</h2>
         <div class="swiper">
             <ul class="swiper-wrapper cards"></ul>
-            <nav class="arrows">
-                <button class="arrow-right">
-                    <svg width="24" height="24" class="svg-left disabled">
-                        <use
-                            href="./img/sprite.svg#icon-arrow-narrow-left"
-                        ></use>
-                    </svg>
-                </button>
-                <button class="arrow-left">
-                    <svg width="24" height="24" class="svg-right">
-                        <use
-                            href="./img/sprite.svg#icon-arrow-narrow-right"
-                        ></use>
-                    </svg>
-                </button>
-            </nav>
         </div>
+        <nav class="arrows">
+            <button class="swiper-button-prev">
+                <svg width="24" height="24" class="svg-left">
+                    <use href="./img/sprite.svg#icon-arrow-narrow-left"></use>
+                </svg>
+            </button>
+            <button class="swiper-button-next">
+                <svg width="24" height="24" class="svg-right">
+                    <use href="./img/sprite.svg#icon-arrow-narrow-right"></use>
+                </svg>
+            </button>
+        </nav>
     </div>
 </section>
