--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -20,31 +20,31 @@
         <ul class="swiper-wrapper">
           <li class="swiper-slide">
             <picture>
-              <source srcset="./img/image-1-desktop-1x.png 1x, ./img/image-1-desktop-2x.png 2x"
+              <source srcset="/img/image-1-desktop-1x.webp 1x, /img/image-1-desktop-2x.webp 2x"
                 media="(min-width: 768px) and (max-width: 1024px)" />
-              <source srcset="./img/image-1-desktop-1x.png 1x, ./img/image-1-desktop-2x.png 2x"
+              <source srcset="/img/image-1-desktop-1x.webp 1x, /img/image-1-desktop-2x.webp 2x"
                 media="(min-width: 1025px)" />
-              <img loading="lazy" src="./img/img-1-1x.png" srcset="./img/img-1-1x.png 1x, ./img/img-1-2x.png 2x"
+              <img loading="lazy" src="/img/img-1-1x.png" srcset="/img/img-1-1x.png 1x, /img/img-1-2x.png 2x"
                 alt="Project one" class="img-project" />
             </picture>
           </li>
           <li class="swiper-slide">
             <picture>
-              <source srcset="./img/image-2-desktop-1x.png 1x, ./img/image-2-desktop-2x.png 2x"
+              <source srcset="/img/image-2-desktop-1x.webp 1x, /img/image-2-desktop-2x.webp 2x"
                 media="(min-width: 768px) and (max-width: 1024px)" />
-              <source srcset="./img/image-2-desktop-1x.png 1x, ./img/image-2-desktop-2x.png 2x"
+              <source srcset="/img/image-2-desktop-1x.webp 1x, /img/image-2-desktop-2x.webp 2x"
                 media="(min-width: 1025px)" />
-              <img loading="lazy" src="./img/img-2-1x.png" srcset="./img/img-2-1x.png 1x, ./img/img-2-2x.png 2x"
+              <img loading="lazy" src="/img/img-2-1x.png" srcset="/img/img-2-1x.png 1x, /img/img-2-2x.png 2x"
                 alt="Project two" class="img-project" />
             </picture>
           </li>
           <li class="swiper-slide">
             <picture>
-              <source srcset="./img/image-3-desktop-1x.png 1x, ./img/image-3-desktop-2x.png 2x"
+              <source srcset="/img/image-3-desktop-1x.webp 1x, /img/image-3-desktop-2x.webp 2x"
                 media="(min-width: 768px) and (max-width: 1024px)" />
-              <source srcset="./img/image-3-desktop-1x.png 1x, ./img/image-3-desktop-2x.png 2x"
+              <source srcset="/img/image-3-desktop-1x.webp 1x, /img/image-3-desktop-2x.webp 2x"
                 media="(min-width: 1025px)" />
-              <img loading="lazy" src="./img/img-3-1x.png" srcset="./img/img-3-1x.png 1x, ./img/img-3-2x.png 2x"
+              <img loading="lazy" src="/img/img-3-1x.png" srcset="/img/img-3-1x.png 1x, /img/img-3-2x.png 2x"
                 alt="Project three" class="img-project" />
             </picture>
           </li>
