--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -1,275 +1,107 @@
-.fag-ul {
-    padding: 0;
-    list-style: none;
-    margin: 0 auto;
-    width: 100%;
+li.ac {
+    background-color: #1c1d20;
+    color: #fafafa;
+    padding: 20px 0;
+    margin-top: 0;
+    border: 1px solid rgba(250, 250, 250, 0.2);
+    border-right: none;
+    border-left: none;
     max-width: 343px;
 }
 
-.fag-h1 {
+.faq-title {
     font-weight: 600;
     font-size: 16px;
+    color: rgba(250, 250, 250, 0.4);
+    padding-bottom: 32px;
+}
+
+.ac-header .ac-trigger .faq-ac-trigger {
+    font-weight: 600;
+    font-size: 20px;
     line-height: 1.5;
     letter-spacing: -0.02em;
-    color: rgba(250, 250, 250, 0.4);
-    width: 284px;
-    margin-bottom: 32px;
-    width: 100%;
+    position: relative;
+    width: 80%;
+    padding-bottom: 16px;
 }
 
-.fag-li {
-    display: flex;
-    flex-direction: column;
-    width: 343px;
-    border-bottom: 1px solid rgba(250, 250, 250, 0.2);
-    width: 100%;
-}
-
-.fag-li:nth-child(1) {
-    border-top: 1px solid rgba(250, 250, 250, 0.2);
-}
-
-.accordion-header {
+li.ac .ac-trigger {
+    font-family: 'Inter Tight', sans-serif;
     font-weight: 600;
     font-size: 20px;
     line-height: 1.5;
     letter-spacing: -0.02em;
     color: #fafafa;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    text-align: left;
-    padding: 0;
-    width: 100%;
+    padding: 0 50px 0 0;
 }
 
-.ac-panel {
-    transition: max-height 0.7s ease, opacity 0.7s ease, padding-bottom 0.7s ease;
-}
-
-.accordion-header.open {
-    margin-bottom: 16px;
-}
-
-.ac-panel.visible {
-    max-height: 500px;
-    opacity: 1;
-    padding-bottom: 20px;
-}
-
-.accordion-body {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: -0.02em;
+li.ac .ac-panel .ac-text {
     color: rgba(250, 250, 250, 0.6);
-    /* padding-bottom: 20px;
-    display: none; */
-    max-height: 0;
-    overflow: hidden;
-    padding-bottom: 0;
-    opacity: 0;
-    transition: max-height 0.7s ease, padding-bottom 0.7s ease;
 }
 
-.accordion-body.visible {
-    max-height: 150px;
-    padding-bottom: 20px;
-    visibility: visible;
-    opacity: 1;
+.ac-trigger {
+    padding: 0;
 }
 
-/* .accordion-body.active {
-    display: block;
-} */
-
-
-.accordion>li:nth-child(1) .accordion-text {
-    width: 265px;
-}
-
-.accordion__item:nth-child(6) .accordion-text {
-    width: 289px;
-}
-
-.width-text {
-    width: 241px;
-}
-
-.icon-sec {
-    border-radius: 50%;
-    display: flex;
-    padding: 7px;
-    width: 34px;
-    height: 34px;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid rgba(250, 250, 250, 0.2);
-    cursor: pointer;
-    fill: transparent;
-    stroke: white;
-}
-
-.icon-div {
-    height: 34px;
-}
-
-.icon-up {
-    display: inline;
-}
-
-.icon-down {
+.ac-trigger::after {
     display: none;
 }
 
+.faq-btn {
+    position: absolute;
+    top: 0;
+    right: 0px;
+    border: 1px solid rgba(250, 250, 250, 0.2);
+    border-radius: 100px;
+    padding: 7px;
+    width: 34px;
+    height: 34px;
+    background-color: #1c1d20;
+    fill: #fafafa;
+}
 
-
+#faq p.ac-text {
+    font-family: 'Inter Tight', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 16px 0 0;
+}
 
 @media only screen and (min-width: 768px) {
-    .fag-li {
-        width: 704px;
+    #faq p.ac-text {
+        padding: 26px 0 0;
     }
 
-    .accordion-header {
-        margin-top: 32px;
-        margin-bottom: 42px;
+    .faq-btn {
+        top: auto;
     }
 
-    /* .ac-panel {
-        display: none;
-        margin-top: 0;
-    } */
-
-    .accordion-header.open {
-        margin-bottom: 26px;
+    li.ac {
+        padding: 32px 0 24px;
+        max-width: 704px;
     }
 
-    /* .ac-panel.visible {
-        display: block;
-    } */
-
-    .accordion-body.visible {
-        padding-bottom: 24px;
-    }
-
-    .accordion>li:nth-child(1) .accordion-text {
-        width: 100%;
-    }
-
-    .width-text {
-        width: 100%;
-    }
-
-    .accordion__item:nth-child(6) .accordion-text {
-        width: 485px;
-    }
-
-    .accordion-body {
-        /* padding-bottom: 24px; */
-        width: 640px;
-
-    }
-
-    .accordion-header {
-        /* margin-bottom: 42px; */
-    }
-
-    .fag-ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .icon-sec {
-        border: 1px solid rgba(250, 250, 250, 0.2);
-        border-radius: 100px;
-        padding: 10px;
-        width: 40px;
-        height: 40px;
-        margin-left: 8px;
+    .ac-header {
+        padding-bottom: 26px;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
-
 @media only screen and (min-width: 1440px) {
-    .fag-ul {
-        width: 1376px;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        justify-content: center;
-        align-items: stretch;
+    li.ac {
+        padding: 32px 32px 26px 0;
+        max-width: 680px;
     }
 
-    .ac-panel {
-        transition: max-height 0.7s ease, opacity 0.7s ease, padding-bottom 0.7s ease;
+    li.ac:nth-child(2n) {
+        padding: 32px 0 26px 32px;
+        border-left: 1px solid rgba(250, 250, 250, 0.2);
     }
 
-    .accordion-body.visible {
-        padding-bottom: 26px;
-        max-height: 100px;
-        opacity: 1;
-    }
-
-    .fag-li {
-        width: 688px;
-    }
-
-    .accordion-body {
-        max-height: 0;
-        overflow: hidden;
-        opacity: 0;
-
-        width: 656px;
-    }
-
-    .fag-li:nth-child(1) {
-        order: 1;
-    }
-
-    .fag-li:nth-child(2) {
-        order: 3;
-    }
-
-    .fag-li:nth-child(3) {
-        order: 5;
-    }
-
-    .fag-li:nth-child(4) {
-        order: 2;
-        border-top: 1px solid rgba(250, 250, 250, 0.2);
-    }
-
-    .fag-li:nth-child(5) {
-        order: 4;
-    }
-
-    .fag-li:nth-child(6) {
-        order: 6;
-    }
-
-    .right-left {
-        border-right: 1px solid rgba(250, 250, 250, 0.2);
-    }
-
-    .right-left-svg {
-        margin-right: 32px;
-    }
-
-    .right-elements {
-        padding-left: 32px;
-    }
-
-    .last-element-margin {
-        margin-left: 131px;
-    }
-
-    .accordion-body {
-        /* padding-bottom: 26px; */
+    .accordion-container {
+        display: flex;
+        flex-wrap: wrap;
     }
 }
