--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -177,7 +177,7 @@
                 </li>
             </ul>
         </div>
-        <div class="accordion-toggle skills">
+        <div class="skills">
             <ul class="skills-list">
                 <li class="skills-list-items chosen">HTML/CSS</li>
                 <li class="skills-list-items">JavaScript</li>
@@ -186,7 +186,7 @@
                 <li class="skills-list-items">React Native</li>
                 <li class="skills-list-items">Soft skills</li>
             </ul>
-            <button class="accordion-toggle">
+            <button class="skills-btm">
                 <div class="about-svg-side-icon">
                     <svg
                         class="about-side-icon icon-right"
