--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -30,31 +30,6 @@
             </li>
             <li class="ac">
                 <h4 class="ac-header ac-trigger faq-ac-trigger">
-                    How can I contact you?
-                    <button type="button" class="faq-btn">
-                        <svg width="20" height="20" class="faq-arrow">
-                            <use
-                                class="faq-arrow-down"
-                                href="/img/sprite.svg#icon-arrow-down"
-                            ></use>
-                            <use
-                                class="faq-arrow-up visually-hidden"
-                                href="/img/sprite.svg#icon-arrow-up"
-                            ></use>
-                        </svg>
-                    </button>
-                </h4>
-                <div class="ac-panel">
-                    <p class="ac-text">
-                        In the field of web development, there are various
-                        technologies and programming languages. Typically, this
-                        includes a combination of frontend (client side) and
-                        backend (server side) languages.
-                    </p>
-                </div>
-            </li>
-            <li class="ac">
-                <h4 class="ac-header ac-trigger faq-ac-trigger">
                     What are the deadlines for the project?
                     <button type="button" class="faq-btn">
                         <svg width="20" height="20" class="faq-arrow">
@@ -71,39 +46,9 @@
                 </h4>
                 <div class="ac-panel">
                     <p class="ac-text">
-                        The terms of project implementation depend to a large
-                        extent on a number of factors, such as the scope of the
-                        project, its complexity, and the availability of
-                        resources. Determining exact deadlines is a difficult
-                        task, and it usually occurs during the planning phase of
-                        the project.
-                    </p>
-                </div>
-            </li>
-            <li class="ac">
-                <h4 class="ac-header ac-trigger faq-ac-trigger">
-                    Do you provide advice or support?
-                    <button type="button" class="faq-btn">
-                        <svg width="20" height="20" class="faq-arrow">
-                            <use
-                                class="faq-arrow-down"
-                                href="/img/sprite.svg#icon-arrow-down"
-                            ></use>
-                            <use
-                                class="faq-arrow-up visually-hidden"
-                                href="/img/sprite.svg#icon-arrow-up"
-                            ></use>
-                        </svg>
-                    </button>
-                </h4>
-                <div class="ac-panel">
-                    <p class="ac-text">
-                        The terms of project implementation depend to a large
-                        extent on a number of factors, such as the scope of the
-                        project, its complexity, and the availability of
-                        resources. Determining exact deadlines is a difficult
-                        task, and it usually occurs during the planning phase of
-                        the project.
+                        The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project,
+                        its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually
+                        occurs during the planning phase of the project.
                     </p>
                 </div>
             </li>
@@ -125,17 +70,63 @@
                 </h4>
                 <div class="ac-panel">
                     <p class="ac-text">
-                        Payment through credit and debit cards such as Visa,
-                        MasterCard, specialized electronic payment systems such
-                        as PayPal, as well as payments in cryptocurrencies such
-                        as Bitcoin, Ethereum and others.
+                        Payment through credit and debit cards such as Visa, MasterCard, specialized electronic payment systems such as PayPal,
+                        as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
                     </p>
                 </div>
             </li>
             <li class="ac">
                 <h4 class="ac-header ac-trigger faq-ac-trigger">
-                    What does the process of developing a software product look
-                    like from idea to implementation?
+                    How can I contact you?
+                    <button type="button" class="faq-btn">
+                        <svg width="20" height="20" class="faq-arrow">
+                            <use
+                                class="faq-arrow-down"
+                                href="/img/sprite.svg#icon-arrow-down"
+                            ></use>
+                            <use
+                                class="faq-arrow-up visually-hidden"
+                                href="/img/sprite.svg#icon-arrow-up"
+                            ></use>
+                        </svg>
+                    </button>
+                </h4>
+                <div class="ac-panel">
+                    <p class="ac-text">
+                        In the field of web development, there are various technologies and programming languages. Typically, this includes a
+                        combination of frontend (client side) and backend (server side) languages.
+                    </p>
+                </div>
+            </li>
+            <li class="ac">
+                <h4 class="ac-header ac-trigger faq-ac-trigger">
+                    Do you provide advice or support?
+                    <button type="button" class="faq-btn">
+                        <svg width="20" height="20" class="faq-arrow">
+                            <use
+                                class="faq-arrow-down"
+                                href="/img/sprite.svg#icon-arrow-down"
+                            ></use>
+                            <use
+                                class="faq-arrow-up visually-hidden"
+                                href="/img/sprite.svg#icon-arrow-up"
+                            ></use>
+                        </svg>
+                    </button>
+                </h4>
+                <div class="ac-panel">
+                    <p class="ac-text">
+                        The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project,
+                        its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually
+                        occurs during the planning phase of the project.
+                    </p>
+                </div>
+            </li>
+            <li class="ac">
+                <h4 class="ac-header ac-trigger faq-ac-trigger">
+                    <span class="h4-last-elem">
+                        What does the process of developing a software product look like from idea to implementation?
+                    </span>
                     <button type="button" class="faq-btn">
                         <svg width="20" height="20" class="faq-arrow">
                             <use
